--- a/src/forms/PasswordChangeForm/PasswordChangeForm.module.css
+++ b/src/forms/PasswordChangeForm/PasswordChangeForm.module.css
@@ -25,6 +25,12 @@
 
 .confirmChangesSectionVisible {
   opacity: 1;
+  height: auto;
+}
+
+.confirmChangesSectionHidden {
+  opacity: 0;
+  height: 0px;
 }
 
 .confirmChangesTitle {
